# docstring2markdown

./: README.md  setup.cfg
docs/: doc.md
docstring2markdown/: __init__.py  _cli.py  parser.py
