[metadata]
name = docstring2markdown
version = attr: docstring2markdown.__version__
description = generate github markdown from google docstring
long_description = file: README.md
long_description_content_type = text/markdown
author = Junya Morioka
author_email = mjun@mjunya.com
license = LICENSE

[options]
packages = find:
python_requires = >=3.6
include_package_data = True

[options.entry_points]
console_scripts =
    doc-to-md = docstring2markdown._cli:_cli
